--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+
+
 
     <application
         android:allowBackup="true"
@@ -32,8 +36,6 @@
         <activity android:name=".MyFragment"/>
         <activity android:name=".DetailActivity"/>
         <activity android:name=".SearchResultsActivity" />
-
-
     </application>
 
 </manifest>
