--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <activity android:name=".NewsFragment"/>
         <activity android:name=".CategoryFragment"/>
         <activity android:name=".DiaryFragment"/>
-        <activity android:name=".MyFragment"/>
+        <activity android:name=".AlarmFragment"/>
         <activity android:name=".DetailActivity"/>
         <activity android:name=".SearchResultsActivity" />
     </application>
